--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <img src="" alt="" width="100%" height="200" border="3">
      </div>
      <div class="col-7">
-        <a href="htmlwork.html">My HTML Work</a>
-        <a href="js.html">My JS Work</a>
+        <a href="public/htmlwork.html">My HTML Work</a>
+        <a href="public/js.html">My JS Work</a>
      </div>
     </div>
 
