--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             From India</h1>
         </div>
         <div class="img">
-          <img src="Img/IMG_20220809_201951-.png" alt="dp"> 
+          <!-- <img src="Img/IMG_20220809_201951-.png" alt="dp">  -->
         </div>
       </div>
        
