--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <!-- <h1 class="sub-title">My Work</h1> -->
                         <div class="work-list">
                           <div class="work">
-                            <img src="img/Hotel-work-1.jpg" alt="">
+                            <img src="img/hbg.jpg" alt="">
                             <div class="layer">
                               <h3>Hotel Form</h3>
                                <p>Hotel Registration with total Amount </p>
@@ -247,7 +247,7 @@
                             </div>
                           </div>
                           <div class="work">
-                            <img src="img/BMI-work-2.jpg" alt="">
+                            <img src="img/unnamed.png" alt="">
                             <div class="layer">
                               <h3>BMI</h3>
                                <p>Working on processs... </p>
