--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   
   <h4 class="skills-heading text-center mb-2 pb-2"> My Service</h4>
   <div id="Service"  class="service" >
-                 <main>
+                 <main class="box">
                   <article class="card">
                     <div class="card-header  p-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="26" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
