--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </div>
                           </div>
                           <div class="work">
-                            <img src="Img/BMI-W.png" alt="">
+                            <img src="./Img/Bmi-Screen-Shot.png" alt="">
                             <div class="layer">
                               <h3>BMI</h3>
                                <p>Working on processs... </p>
