--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <!-- <h1 class="sub-title">My Work</h1> -->
                         <div class="work-list">
                           <div class="work">
-                            <img src="Img/Hotel-Reg.png" alt="">
+                            <img src="./Img/Hotel-Reg.png" alt="">
                             <div class="layer">
                               <h3>Hotel Form</h3>
                                <p>Hotel Registration with total Amount </p>
