--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <p>Web Developer</p>
           <h1>Hi, I'm Md <span> Faizan </span>Ahmad 
             From India</h1>
+            
         </div>
         <div class="img">
           <!-- <img src="Img/IMG_20220809_201951-.png" alt="dp">  -->
@@ -456,7 +457,7 @@
     sidemenu.style.right = "0";
   }
   function closemenu(){
-    sidemenu.style.right = "-200px";
+    sidemenu.style.right = "-200";
   }
 </script>
 </body>
