--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="layer">
               <h3>Hotel Form</h3>
               <p>Hotel Registration with total Amount </p>
-              <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+              <a href="https://iamfaizandev.github.io/Hotel-Room-Booking/"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
                   class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd"
                     d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z" />
