--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
           <div class="work">
             <img src="./Img/Hotel-Gif.gif" alt="">
             <div class="layer">
-              <h3>Hotel Form</h3>
-              <p>Hotel Registration with total Amount </p>
+              <h3>Hotel Landing Page</h3>
+              <p>Hotel Landing page Design</p>
               <a href="https://iamfaizandev.github.io/Hotel-Room-Booking/"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
                   class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd"
