--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -21,9 +21,7 @@
     <div class="bg-color">
       <div class="container">
         <!-- NavBar -->
-
-
-        <nav>
+         <nav>
           <img src="Img/F-logo--removebg-preview.png" alt="" class="logo">
           <div class="greeting">
             <span style="--d: 1s">Hello!</span>
@@ -31,7 +29,7 @@
             <span style="--d: 13s" id="date"></span>
             <span style="--d: 4s" id="status"></span>
           </div>
-          <ul id="sidemenu">
+          <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#Service">Service</a></li>
@@ -39,7 +37,7 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="public/CV_Md-Faizan-Ahmad.pdf" download="Md-Faizan-Ahmad-CV">Download CV</a></li>
           </ul>
-        </nav>
+        </nav> 
 
         <!-- header name and image  -->
         <div class="text-image">
@@ -92,7 +90,7 @@
 
                               <!-- Skill  -->
         
-            <div class="tab-titles">
+      <div class="tab-titles">
       <p class="tab-links active-link" onclick="opentab('front-end')">Front-End</p>
       <p class="tab-links" onclick="opentab('back-end')">Back-End</p>
       <p class="tab-links" onclick="opentab('education')">Education</p>
@@ -246,7 +244,7 @@
             </div>
           </div>
         </div>
-      </div>
+        
     </div>
 
     <!-- Work -->
@@ -504,16 +502,7 @@
 
   </script>
 
-  <script>
-    var sidemenu = document.getElementById("sidemenu");
-
-    function openmenu() {
-      sidemenu.style.right = "0";
-    }
-    function closemenu() {
-      sidemenu.style.right = "-200";
-    }
-  </script>
+  
 </body>
 
 </html>
